--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Libre Careers</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contacto.css">
 </head>
 <body>
 
     <!-- Sección de Cabecera -->
     <header class="hero">
         <div class="hero-content">
-            <h1>ÚNETE A TIENDITA</h1>
+            <h1>ÚNETE A MERCADO LIBRE</h1>
             <p>Transforma el futuro del comercio y la tecnología con nosotros.</p>
             <a href="#jobs" class="cta-button">Ver Vacantes</a>
         </div>
@@ -34,13 +34,13 @@
         <h2>Nuestros Productos</h2>
         <div class="carousel">
             <div class="carousel-item">
-                <img src="https://via.placeholder.com/800x500/0000FF/808080?text=Producto+1" alt="Producto 1">
+                <img src="imagen/ropa01.jpeg" alt="Producto 1">
             </div>
             <div class="carousel-item">
-                <img src="https://via.placeholder.com/800x500/FF5733/FFFFFF?text=Producto+2" alt="Producto 2">
+                <img src="imagen/imagen02.jpeg" alt="Producto 2">
             </div>
             <div class="carousel-item">
-                <img src="https://via.placeholder.com/800x500/28A745/FFFFFF?text=Producto+3" alt="Producto 3">
+                <img src="imagen/ropa01.jpeg" alt="Producto 3">
             </div>
         </div>
         <button class="carousel-prev" onclick="moveCarousel(-1)">&#10094;</button>
@@ -87,7 +87,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 TIENDITA - Todos los derechos reservados</p>
+        <p>&copy; 2025 Mercado Libre - Todos los derechos reservados</p>
     </footer>
 
     <script src="script.js"></script>
