--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercado Libre Careers</title>
+    <title>TIENDITA</title>
     <link rel="stylesheet" href="contacto.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <!-- Sección de Cabecera -->
     <header class="hero">
         <div class="hero-content">
-            <h1>ÚNETE A MERCADO LIBRE</h1>
+            <h1>ÚNETE A TIENDITA</h1>
             <p>Transforma el futuro del comercio y la tecnología con nosotros.</p>
             <a href="#jobs" class="cta-button">Ver Vacantes</a>
         </div>
@@ -84,11 +84,7 @@
             <a href="#" class="cta-button">Postúlate</a>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2025 Mercado Libre - Todos los derechos reservados</p>
-    </footer>
+    
 
     <script src="script.js"></script>
 </body>
