carrito vinculado a catalogo

--- a/sections/catalogo.html
+++ b/sections/catalogo.html
@@ -25,6 +25,9 @@
                     <li><a href="#">Ofertas</a></li>
                 </ul>
             </nav>
+            <div class="cart-icon">
+                <a href="carrito.html" id="verCarrito"><i class="fas fa-shopping-cart"></i> <span id="cartCount">0</span></a>
+            </div>
         </div>
     </header>
 
