--- a/sections/carrito.html
+++ b/sections/carrito.html
@@ -9,7 +9,7 @@
 <body>
     <header class="main-header">
         <div class="header-container">
-            <h1>Mi Tienda</h1>
+            <h1>LUXE STYLE</h1>
             <button id="ver-carrito-link" class="btn btn-primary">Ver Carrito</button>
         </div>
     </header>
@@ -31,9 +31,10 @@
             <div class="carrito-items-container"></div>
             <div class="carrito-resumen-simple">
                 <span>Total del Carrito:</span>
-                <strong>$<span id="total-carrito">0.00</span></strong>
+                <strong>S/ <span id="total-carrito">0.00</span></strong>
             </div>
             <div class="paso-navegacion">
+                <button class="btn btn-secondary" id="seguir-comprando">Seguir Comprando</button>
                 <button class="btn btn-danger" id="vaciar-carrito">Vaciar Carrito</button>
                 <button class="btn btn-primary" id="siguiente-envio">Siguiente</button>
             </div>
@@ -46,6 +47,14 @@
             <!-- Información de Contacto -->
             <div class="seccion-contacto">
                 <h3>Información de Contacto</h3>
+                <div class="form-group">
+                    <label for="nombre-cliente">Nombre Completo</label>
+                    <input type="text" id="nombre-cliente" required placeholder="Ingrese su nombre completo">
+                </div>
+                <div class="form-group">
+                    <label for="dni-cliente">DNI</label>
+                    <input type="text" id="dni-cliente" required placeholder="12345678" maxlength="8">
+                </div>
                 <div class="form-group">
                     <label for="email">Correo Electrónico</label>
                     <input type="email" id="email" required placeholder="ejemplo@correo.com">
@@ -179,7 +188,7 @@
             
             <div class="confirmacion-boleta">
                 <div class="boleta-header">
-                    <div class="logo-tienda">Mi Tienda</div>
+                    <div class="logo-tienda">LUXE STYLE</div>
                     <div class="boleta-info">
                         <p>Boleta Electrónica</p>
                         <p>Fecha: <span id="fecha-actual"></span></p>
@@ -190,6 +199,7 @@
                 <div class="boleta-cliente">
                     <h3>Datos del Cliente</h3>
                     <p>Cliente: <span id="cliente-nombre">-</span></p>
+                    <p>DNI: <span id="cliente-dni">-</span></p>
                     <p>Email: <span id="cliente-email">-</span></p>
                     <p>Teléfono: <span id="cliente-telefono">-</span></p>
                 </div>
@@ -220,15 +230,15 @@
                 <div class="boleta-totales">
                     <div class="linea-total">
                         <span>Subtotal:</span>
-                        <span id="subtotal">$0.00</span>
+                        <span id="subtotal">S/ 0.00</span>
                     </div>
                     <div class="linea-total">
                         <span>Envío:</span>
-                        <span id="costo-envio">$0.00</span>
+                        <span id="costo-envio">S/ 0.00</span>
                     </div>
                     <div class="linea-total total-final">
                         <span>Total:</span>
-                        <span id="total-pedido">$0.00</span>
+                        <span id="total-pedido">S/ 0.00</span>
                     </div>
                 </div>
                 
