secciones unidos y algo mas

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-- Menú -->
     <div class="hidden md:flex space-x-6">
       <a href="#" class="hover:text-indigo-600">Inicio</a>
-      <a href="#" class="hover:text-indigo-600">Productos</a>
-      <a href="#" class="hover:text-indigo-600">Carrito</a>
-      <a href="#" class="hover:text-indigo-600">Contacto</a>
+      <a href="sections/catalogo.html" class="hover:text-indigo-600">Productos</a>
+      <a href="sections/carrito.html" class="hover:text-indigo-600">Carrito</a>
+      <a href="sections/contacto.html" class="hover:text-indigo-600">Contacto</a>
     </div>
 
     <!-- Login -->
