acc de creacion de nuevo archivo

--- a/sections/hombres.html
+++ b/sections/hombres.html
@@ -11,7 +11,8 @@
     <header class="header">
         <div class="header-container">
             <div class="logo">
-                <li><a href="/index.html"><span>SWAGG</span>STYLE</a></li>
+                
+                <span hr>LUXE</span>STYLE
             </div>
             <div class="search-container">
                 <input type="text" id="searchInput" placeholder="Buscar productos...">
@@ -19,13 +20,17 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><a href="/sections/hombres.html">Hombre</a></li>
+                    <li><a href="/sections/catalogo.html">Hombre</a></li>
                     <li><a href="#">Mujer</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
+    <section class="contenedor-titulo">
+        <div class="titulo-hombres">
+            <h2>HOMBRES</h2>
+        </div>
+    </section>
     <main class="main">
         <div class="filters">
             <div class="filters-header">
