--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Logo -->
     <a href="#" class="flex items-center space-x-2">
       <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" class="h-8 w-8" alt="">
-      <span class="font-bold text-lg">RopaStyle</span>
+      <span class="font-bold text-lg">SWAGGSTYLE</span>
     </a>
 
     <!-- Barra de búsqueda -->
