--- a/sections/catalogo.html
+++ b/sections/catalogo.html
@@ -219,7 +219,7 @@
         <div class="footer-container">
             <div class="footer-section">
                 <h3>LUXE STYLE</h3>
-                <p>Moda  con estilo, elegancia para el cliente exigente <span>Y MUCHO SWAGGGG</span></p>
+                <p>Moda  con estilo, elegancia para el cliente exigente Y MUCHO SWAGGGG</p>
             </div>
             <div class="footer-section">
                 <h3>Contacto</h3>
