--- a/sections/hombres.html
+++ b/sections/hombres.html
@@ -224,7 +224,7 @@
         <div class="footer-container">
             <div class="footer-section">
                 <h3>LUXE STYLE</h3>
-                <p>Moda  con estilo, elegancia para el cliente exigente <span>Y MUCHO SWAGGGG</span></p>
+                <p>Moda  con estilo, elegancia para el cliente exigente Y MUCHO SWAGGGG</p>
             </div>
             <div class="footer-section">
                 <h3>Contacto</h3>
@@ -261,6 +261,6 @@
         </a>
     </div>
 
-    <script src="/js/catalogo.js"></script>
+    <script src="/js/hombres.js"></script>
 </body>
 </html>
